--- a/css/shopmaster.css
+++ b/css/shopmaster.css
@@ -36,9 +36,38 @@ body {
 #sm-lets-do-this-btn, #sm-email-text-entry {
   font-size: 14pt;
 }
-#valid-email-error-msg {
-    font-family: "Bitter";
-  font-size: 12pt;
-  background-color: #1671B8;
-  color: #FFFFFF;
+#sm-loading-landing {
+    visibility: hidden;
+}
+
+#sm-navi {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #163E5D;
+}
+#sm-tools {
+    display: inline-block;
+    width: 33%;
+}
+#sm-logo {
+    display: inline-block;
+    font-family: "Dancing Script";
+    font-size: 24pt;
+    text-align: center;
+    margin-top: 5px;
+    width: 33%;
+}
+#sm-done {
+    display: inline-block;
+    width: 33%;
+    text-align: right;
+}
+#sm-create-entry {
+    margin-top: 150px;
+}
+#sm-item-text-entry {
+  font-size: 14pt;
 }
