--- a/css/shopmaster.css
+++ b/css/shopmaster.css
@@ -67,21 +67,22 @@ body {
 }
 #sm-create-entry {
     margin-top: 150px;
-    text-align: center;
+    margin-left: 50px;
 }
 #sm-item-text-entry {
     font-size: 14pt;
 }
 #sm-category-text-entry {
     font-size: 14pt;
-    width: 100%;
 }
 #sm-list {
     padding-top: 25px;
-    width: 60%;
 }
 #sm-list ul {
     list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    text-align: left;
 }
 #sm-list .item-container {
     border-radius: 5px;
@@ -90,6 +91,10 @@ body {
     margin: 5px;
     height: 3em;
     background-color: #163E5D;
+}
+#sm-no-list {
+    color: #86B8E0;
+    text-align: center;
 }
 .sm-list-category {
     font-size: 11pt;
