--- a/templates/create.html
+++ b/templates/create.html
@@ -1,11 +1,34 @@
 <!-- jQuery UI -->
 <script src="./js/jquery-ui-1.10.4.custom.min.js"></script>
 
+<!-- This is where the popover for the tools is defined -->
+<script type="text/ng-template" id="tools.html">
+    <div style="font-size:11pt;color:#000000;width:250px;">
+        <h4 style="color:#1671B8">Filters</h4>
+        <label>
+            <input type="checkbox"> Fragile
+        </label>
+        <br />
+        <label>
+            <input type="checkbox"> Frozen
+        </label>
+        <br />
+        <h4 style="color:#1671B8">Highlight Category</h4>
+        <input name="categoryTextView"
+            type="text"
+            class="form-control"
+            id="sm-category-search-entry" 
+            ng-model="searchCategory"
+            placeholder="Search..."
+            typeahead="category for category in categories | filter:$viewValue | limitTo:8">
+    </div>
+</script>
+
 <!-- Content -->
 <div id="sm-navi">
     
     <div id="sm-tools">
-        <button type="button" class="btn btn-primary" style="margin-left:15px;">
+        <button type="button" class="btn btn-primary" style="margin-left:15px;" popover>
             <span class="glyphicon glyphicon-th"></span> Tools
         </button>
     </div>
@@ -23,7 +46,7 @@
 </div>
 
 <div class="container">
-
+    
     <div id="sm-create-entry">
         
         <form role="form" name="createForm" novalidate>
