--- a/templates/create.html
+++ b/templates/create.html
@@ -4,7 +4,7 @@
 <!-- This is where the popover for the tools is defined -->
 <script type="text/ng-template" id="tools.html">
     <div style="font-size:11pt;color:#000000;width:250px;">
-        <h4 style="color:#1671B8">Filters</h4>
+        <h4 style="color:#1671B8">Warnings</h4>
         <label>
             <input type="checkbox"> Fragile
         </label>
@@ -13,14 +13,15 @@
             <input type="checkbox"> Frozen
         </label>
         <br />
-        <h4 style="color:#1671B8">Highlight Category</h4>
+        <h4 style="color:#1671B8">Highlighting</h4>
         <input name="categoryTextView"
             type="text"
             class="form-control"
-            id="sm-category-search-entry" 
+            id="sm-category-text-entry" 
             ng-model="searchCategory"
-            placeholder="Search..."
-            typeahead="category for category in categories | filter:$viewValue | limitTo:8">
+            placeholder="Search for Category..."
+            style="font-size:11pt;"
+            typeahead="category.Name for category in categories | filter:$viewValue | limitTo:8">
     </div>
 </script>
 
@@ -105,20 +106,17 @@
                     <div class="col-md-1" style="font-size:20pt;margin-top:8px;">
                         {{item.aisle}}
                     </div>
-                    
                     <div class="col-md-8">
                         {{item.name}}
                         <br />
                         <span style="font-size:12pt;">{{item.category}}</span>
                     </div>
-                    
                     <button type="button" 
                         class="btn btn-danger"
                         style="float:right;margin-top:.7em;"
                         ng-click="removeItem($index)">
                             <span class="glyphicon glyphicon-remove"></span> Remove
                     </button>
-                    
                     
                 </div>
             </li>
