--- a/templates/create.html
+++ b/templates/create.html
@@ -6,11 +6,11 @@
     <div style="font-size:11pt;color:#000000;width:250px;">
         <h4 style="color:#1671B8">Warnings</h4>
         <label>
-            <input type="checkbox"> Fragile
+            <input type="checkbox" ng-model="warnFragile"> Fragile
         </label>
         <br />
         <label>
-            <input type="checkbox"> Frozen
+            <input type="checkbox" ng-model="warnFrozen"> Frozen
         </label>
         <br />
         <h4 style="color:#1671B8">Highlighting</h4>
