--- a/css/shopmaster.css
+++ b/css/shopmaster.css
@@ -93,6 +93,20 @@ body {
     height: 3em;
     background-color: #163E5D;
 }
+
+.purple {
+    background-color: #e2e9f5 !important;
+}
+.tan {
+    background-color: #f2ecda !important;
+}
+.blue {
+    background-color: #d6ecf1 !important;
+}
+.pink {
+    background-color: #f8e9ee !important;
+}
+
 #sm-no-list {
     color: #86B8E0;
     text-align: center;
@@ -100,4 +114,5 @@ body {
 .sm-list-category {
     font-size: 11pt;
 }
+
 
