Toggling of checkboxes for category highlighting

--- a/templates/create.html
+++ b/templates/create.html
@@ -5,18 +5,11 @@
 <script type="text/ng-template" id="tools.html">
     <div style="font-size:11pt;color:#000000;width:250px;">
         <h4 style="color:#1671B8">Warnings</h4>
-        <label>
-            <input type="checkbox" ng-model="warnFragile"> Fragile
-        </label>
-        <br />        
-        <label>
-            <input type="checkbox" ng-model="warnRefrigerated"> Refrigerated
-        </label>
-        <br />
-        <label>
-            <input type="checkbox" ng-model="warnFrozen"> Frozen
-        </label>        
-        <br />
+        <div ng-repeat="checkbox in checkboxes">
+            <label>
+                <input type="checkbox" value="{{checkbox}}" ng-checked="selectedBoxes.indexOf(checkbox) > -1" ng-click="toggleCheckbox(checkbox)"> {{checkbox}}
+            </label>
+        </div>
         <h4 style="color:#1671B8">Highlighting</h4>
         <input name="categoryTextView"
             type="text"
@@ -105,7 +98,7 @@
         
         <ul sortable>
             <li ng-repeat="item in items">
-                <div class="item-container" ng-class="{pink: item.fragile, blue: item.frozen, purple: item.refrigerated, tan: highlightedCategory($index)}">
+                <div class="item-container" ng-class="{pink: item.fragile && isSelected('Fragile'), blue: item.frozen && isSelected('Frozen'), purple: item.refrigerated && isSelected('Refrigerated'), tan: highlightedCategory($index)}">
                     
                     <div class="col-md-1" style="font-size:20pt;margin-top:8px;">
                         {{item.aisle}}
