--- a/templates/create.html
+++ b/templates/create.html
@@ -45,6 +45,11 @@
 
 <div class="container">
     
+    <div id="sm-output">
+        <span style="font-size:72pt;color:#FFFFFF;">{{projectedTime}}</span> mins
+        <span style="font-size:72pt;margin-left:50px;color:#FFFFFF;">{{items.length}}</span> items
+    </div>
+    
     <div id="sm-create-entry">
         
         <form role="form" name="createForm" novalidate>
