--- a/templates/create.html
+++ b/templates/create.html
@@ -28,7 +28,7 @@
         $("#sm-logo-stats").hide();
         
         $(window).scroll(function() {
-            if ($(window).scrollTop() > $("#sm-output").position().top) {
+            if ($(window).scrollTop() > ($("#sm-output").position().top + 110)) {
                 $("#sm-logo-name").slideUp();
                 $("#sm-logo-stats").slideDown();
             }
@@ -44,7 +44,7 @@
 <!-- Content -->
 <div id="sm-navi">
     
-    <div id="sm-tools">
+    <div id="sm-tools" class="col-md-4">
         <button type="button" class="btn btn-primary" style="margin-left:15px;" popover>
             <span class="glyphicon glyphicon-th"></span> Tools
         </button>
@@ -53,16 +53,17 @@
         </button>
     </div>
     
-    <div id="sm-logo">
+    <div id="sm-logo" class="col-md-4">
         <div id="sm-logo-name">
             ShopMaster
         </div>
         <div id="sm-logo-stats">
-            {{projectedTime}} mins, {{items.length}} items
+            <span style="font-size:26pt;color:#FFFFFF;">{{projectedTime}}</span> mins,
+            <span style="font-size:26pt;color:#FFFFFF;">{{items.length}}</span> items
         </div>
     </div>
     
-    <div id="sm-done">
+    <div id="sm-done" class="col-md-4">
         <button type="button" class="btn btn-success" style="margin-right:15px;">
             Send to Phone <span class="glyphicon glyphicon-send"></span>
         </button>
