--- a/css/shopmaster.css
+++ b/css/shopmaster.css
@@ -62,6 +62,12 @@ body {
     text-align: center;
     margin-top: 5px;
 }
+#sm-logo-mob {
+    font-size: 12pt;
+    color: #86B8E0;
+    text-align: left;
+    margin-top: 5px;
+}
 #sm-logo-name {
     font-size: 24pt;
     position: relative;
@@ -85,6 +91,10 @@ body {
 #sm-create-entry {
     margin-left: 50px;
 }
+#sm-create-entry-mob {
+    margin-left: 50px;
+    margin-top: 100px;
+}
 #sm-item-text-entry {
     font-size: 14pt;
 }
@@ -107,6 +117,16 @@ body {
     margin: 10px;
     height: 3em;
     background-color: #163E5D;
+}
+
+#sm-list .item-container-mob {
+    cursor: move;
+    height: 100px;
+    background-color: #C8DEF3;
+    border-top: 1px solid #7691AC;
+    border-bottom: 1px solid #7691AC;
+    height: 50px;
+    line-height: 50px;
 }
 
 .fragile {
