--- a/css/shopmaster.css
+++ b/css/shopmaster.css
@@ -114,9 +114,21 @@ body {
     border-radius: 5px;
     cursor: move;
     padding: 5px 25px;
-    margin: 10px;
+    margin-left: 5px;
     height: 3em;
     background-color: #163E5D;
+    display: inline-block;
+    width: 91%;
+}
+
+#sm-item-index {
+    min-width: 35px;
+    display: inline-block;
+    text-align: right;
+    float: left;
+    margin-top: 17px;
+    padding-right: 10px;
+    color: #86B8E0;
 }
 
 #sm-list .item-container-mob {
@@ -179,7 +191,7 @@ body {
     width: 8%;
     color: #86B8E0;
     display: inline-block;
-    margin-left: 42px;
+    margin-left: 65px;
 }
 #item-marker {
     width: 79%;
