--- a/public/css/shopmaster.css
+++ b/public/css/shopmaster.css
@@ -25,10 +25,6 @@ body {
   margin-left: 200px;
 }
 
-#mobile-test-add{
-    margin-top: 200px;
-}
-
 
 #sm-login-slide {
   width: 35%;
@@ -106,8 +102,7 @@ body {
     font-size: 14pt;
 }
 #sm-list {
-    padding: 0;
-    margin: 0;
+    padding-top: 25px;
 }
 #sm-list ul {
     list-style-type: none;
@@ -136,31 +131,14 @@ body {
     color: #86B8E0;
 }
 
-#sm-list-mob {
-    margin: 0;
-    padding: 0;
-    background-color: #C8DEF3;
-    padding-top: 60px;
-}
-
-#sm-list-mob ul {
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-#sm-list-mob li {
-    height: 50px;
-    line-height: 50px;
-    border-bottom: 1px solid #7691AC;  
-}
-
 #sm-list .item-container-mob {
     cursor: move;
+    height: 100px;
     background-color: #C8DEF3;
+    border-top: 1px solid #7691AC;
+    border-bottom: 1px solid #7691AC;
     height: 50px;
     line-height: 50px;
-    width: 100%;
 }
 
 .fragile {
