--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -1,6 +1,9 @@
 <!-- jQuery UI -->
 <script src="./js/jquery-ui-1.10.4.custom.min.js"></script>
 
+<!-- Tooltips -->
+<script src="./js/tour.js"></script>
+
 <!-- This is where the popover for the tools is defined -->
 <script type="text/ng-template" id="tools.html">
     <div style="font-size:11pt;color:#000000;width:250px;">
@@ -37,7 +40,6 @@
                 $("#sm-logo-name").slideDown();
             }
         });
-        
     });
 </script>
 
@@ -45,11 +47,16 @@
 <div id="sm-navi">
     
     <div id="sm-tools" class="col-md-4">
-        <button type="button" class="btn btn-primary" style="margin-left:15px;" popover>
+        <button type="button" 
+                class="btn btn-primary" 
+                style="margin-left:15px;" 
+                id="sm-tools-btn"
+                ng-click="onToolsClick()"
+                popover>
             <span class="glyphicon glyphicon-th"></span> Tools
         </button>
-        <button type="button" class="btn btn-primary" style="display:inline-block;" popover>
-            <span class="glyphicon glyphicon-question-sign"></span> Assist Me
+        <button type="button" class="btn btn-primary" style="display:inline-block;" id="sm-assist-btn">
+            <span class="glyphicon glyphicon-screenshot"></span> Map
         </button>
     </div>
     
