--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -40,4 +40,8 @@
         </div>
         
     </div>
+    
+    <div id="sm-credit">
+        Built with love by Jonathan Ballands, Sloane Neidig, and Brad Retterer
+    </div>
 </div>
