--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -1,19 +1,16 @@
 <!-- jQuery UI -->
 <script src="./js/jquery-ui-1.10.4.custom.min.js"></script>
 
-<!-- Tooltips -->
-<script src="./js/tour.js"></script>
-
 <!-- This is where the popover for the tools is defined -->
 <script type="text/ng-template" id="tools.html">
     <div style="font-size:11pt;color:#000000;width:250px;">
-        <h4 style="color:#1671B8">Warnings</h4>
+        <h4 style="color:#1671B8">Toggle Warnings</h4>
         <div ng-repeat="checkbox in checkboxes">
             <label>
                 <input type="checkbox" value="{{checkbox.name}}" ng-checked="selectedBoxes.indexOf(checkbox.name) > -1" ng-click="toggleCheckbox(checkbox.name)"> <div style="width:12px;height:12px;display:inline-block;background-color:{{checkbox.color}}"></div> {{checkbox.name}}
             </label>
         </div>
-        <h4 style="color:#1671B8">Highlighting</h4>
+        <h4 style="color:#1671B8">Highlight Items</h4>
         <input name="categoryTextView"
             type="text"
             class="form-control"
@@ -43,6 +40,27 @@
     });
 </script>
 
+<!-- Map Modal -->
+<div class="modal fade" 
+     id="mapModal" 
+     tabindex="-1" 
+     role="dialog" 
+     aria-labelledby="myModalLabel" 
+     aria-hidden="true"
+     style="color:#000000;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Map of 1322 South Main Street (Gucci Kroger)</h4>
+            </div>
+            <div class="modal-body" style="text-align:center;">
+                <img src="./img/kroger_map.png" style="width:550px;">
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Content -->
 <div id="sm-navi">
     
@@ -55,7 +73,12 @@
                 popover>
             <span class="glyphicon glyphicon-th"></span> Tools
         </button>
-        <button type="button" class="btn btn-primary" style="display:inline-block;" id="sm-assist-btn">
+        <button type="button" 
+                class="btn btn-primary"
+                style="display:inline-block;"
+                id="sm-assist-btn"
+                data-toggle="modal"
+                data-target="#mapModal">
             <span class="glyphicon glyphicon-screenshot"></span> Map
         </button>
     </div>
@@ -154,10 +177,12 @@
                 <div id="sm-item-index">
                     {{$index + 1}}
                 </div>
-                <div class="item-container" ng-class="{ refrigerated: item.refrigerated && isSelected('Refrigerated'),
-                                                      frozen: item.frozen && isSelected('Frozen'),
-                                                      fragile: item.fragile && isSelected('Fragile'),
-                                                      highlighted: highlightedCategory($index)}">
+                <div class="item-container" 
+                     ng-class="{ refrigerated: item.refrigerated && isSelected('Refrigerated'),
+                                 frozen: item.frozen && isSelected('Frozen'),
+                                 fragile: item.fragile && isSelected('Fragile'),
+                                 highlighted: highlightedCategory($index)}"
+                     id="sm-item-container-{{$index}}">
 
                     <div class="col-md-1" style="font-size:20pt;margin-top:8px;">
                         {{item.aisle}}
