--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -20,7 +20,7 @@
                        type="email"
                        class="form-control"
                        id="sm-email-text-entry" 
-                       placeholder="Type your email address"
+                       placeholder="Type your email to get started"
                        ng-model="emailAddress"
                        required>
 
@@ -42,6 +42,6 @@
     </div>
     
     <div id="sm-credit">
-        Built with love by Jonathan Ballands, Sloane Neidig, and Brad Retterer
+        A web application by Jonathan Ballands, Sloane Neidig, and Brad Retterer
     </div>
 </div>
