Got started on the mobile site

--- a/public/css/shopmaster.css
+++ b/public/css/shopmaster.css
@@ -9,7 +9,9 @@ body {
     color: #B53E3E;
 }
 
-/* IDs */
+/*
+ *  LANDING
+ */
 
 #sm-title-slide {
   margin-top: 200px;
@@ -32,7 +34,7 @@ body {
 }
 
 #sm-login-slide {
-  width: 35%;
+  width: 50%;
   margin-top: 70px;
   text-align: center;
   margin-left: auto;
@@ -44,6 +46,10 @@ body {
 #sm-loading-landing {
     visibility: hidden;
 }
+
+/*
+ *  CREATE
+ */
 
 #sm-navi {
     position: fixed;
@@ -65,12 +71,6 @@ body {
     font-size: 12pt;
     color: #86B8E0;
     text-align: center;
-    margin-top: 5px;
-}
-#sm-logo-mob {
-    font-size: 12pt;
-    color: #86B8E0;
-    text-align: left;
     margin-top: 5px;
 }
 #sm-logo-name {
@@ -95,10 +95,6 @@ body {
 
 #sm-create-entry {
     margin-left: 50px;
-}
-#sm-create-entry-mob {
-    margin-left: 50px;
-    margin-top: 100px;
 }
 #sm-item-text-entry {
     font-size: 14pt;
@@ -134,16 +130,6 @@ body {
     margin-top: 17px;
     padding-right: 10px;
     color: #86B8E0;
-}
-
-#sm-list .item-container-mob {
-    cursor: move;
-    height: 100px;
-    background-color: #C8DEF3;
-    border-top: 1px solid #7691AC;
-    border-bottom: 1px solid #7691AC;
-    height: 50px;
-    line-height: 50px;
 }
 
 .fragile {
@@ -235,4 +221,33 @@ body {
 }
 #sm-got-it-btn {
     margin-top: 20px;
+}
+
+/*
+ *  MOBILE
+ */
+
+#sm-logo-mob {
+    font-size: 12pt;
+    color: #86B8E0;
+    text-align: left;
+    margin-top: 5px;
+}
+#sm-list-mob {
+    margin-top: 65px;
+}
+#sm-list-mob ul {
+    list-style-type: none;
+    margin: -5px;
+    padding: 0px;
+    text-align: left;
+}
+#sm-list-mob .item-container {
+    cursor: move;
+    margin-left: 5px;
+    margin-top: 5px;
+    height: 3em;
+    background-color: #163E5D;
+    display: inline-block;
+    width: 100%;
 }
