--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -131,6 +131,7 @@
                     ng-model="tbaItem"
                     id="sm-item-text-entry" 
                     placeholder="Type a grocery item..."
+                    ng-click="destroyTooltips()"
                     required>
             </div>
             
