--- a/public/templates/mobile.html
+++ b/public/templates/mobile.html
@@ -3,42 +3,45 @@
 
 <!-- Content -->
 <div id="sm-navi">
-    
+
     <div id="sm-logo-mob" class="col-xs-6">
         <div id="sm-logo-name">
             ShopMaster
         </div>
     </div>
-    
+
     <div id="sm-done" class="col-xs-6">
         <button type="button" class="btn btn-success" style="margin-right:15px;">
             Done <span class="glyphicon glyphicon-ok"></span>
         </button>
     </div>
-    
+
 </div>
 
 <div id="sm-list-mob">
-    
+
     <ul sortable>
         <li ng-repeat="item in items">
             <div class="item-container">
                 <div class="col-xs-1">
                     <label>
-                        <input type="checkbox" style="position: relative; top: 12px" />
+                        <input type="checkbox" style="position: relative; top: 20px" />
                     </label>
                 </div>
-                
-                <div class="col-xs-8" style="text-align: left">
+
+                <div class="col-xs-8" style="text-align: left; padding-top: 3px;">
                     {{item.name}}
+                    <br />
+                    <span style="font-size:12pt;">{{item.category}}</span>
                 </div>
-                
-                <div class="col-xs-3" style="text-align: right">
+
+                <div class="col-xs-1" style="text-align: right; padding-top: 13px; font-size: 20pt; margin-left: 15px;">
                     {{item.aisle}}
                 </div>
                 <br />
             </div>
         </li>
     </ul>
-    
+
 </div>
+
