--- a/public/templates/mobile.html
+++ b/public/templates/mobile.html
@@ -44,4 +44,27 @@
     </ul>
 
 </div>
+<div id="sm-footer">
+    <form id="sm-quick-add-form" role="form" name="quickAddForm" novalidate>
+            
+            <div class="col-xs-9">
+                <input name="itemTextView"
+                    type="text"
+                    ng-model="tbqaItem"
+                    class="form-control"
+                    id="sm-quick-add-item-text-entry" 
+                    placeholder="Quick add an item..."
+                    required>
+            </div>
+
+            <div class="col-xs-3">
+                <button type="button" 
+                        class="btn btn-info"
+                        ng-disabled="quickAddForm.$invalid">
+                    <span class="glyphicon glyphicon-plus"></span> Add
+                </button>
+            </div>
+            
+        </form>
+</div>
 
